fixed contact button word-wrap error, and added video to devlog

--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body {
 	margin: 0px 25%;
 	overflow: hidden;
 }
+
+.video {
+	height: 600px;
+}
 		
 		
 @media only screen and (max-width: 1280px) {
@@ -26,6 +30,10 @@ body {
 		margin: 0px 20%;
 		overflow: hidden;
 	}	
+	
+	.video {
+		height: 400px;
+	}
 }
 		
 		
@@ -35,6 +43,10 @@ body {
 		margin: 0px 15%;
 		overflow: hidden;
 	}	
+	
+	.video {
+		height: 400px;
+	}
 }
 		
 		
@@ -48,6 +60,10 @@ body {
 	.nav-center {
 		width: 100%;
 		margin: 0px 0px;
+	}
+	
+	.video {
+		height: 400px;
 	}
 }
 
